dark blurr fix

--- a/style.css
+++ b/style.css
@@ -209,12 +209,19 @@ nav {
 
 /* PROJECTS */
 
+.project {
+    margin-bottom: 135px;
+}
+
+.project :last-child {
+    margin-bottom: 40px;
+}
 .project__img {
     width: 100%;
     transition: all 500ms ease;
 }
 
-.project__wraper {
+.project__wrapper {
     display: flex;
     box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
     border-radius: 20px;
@@ -222,7 +229,7 @@ nav {
     position: relative;
 }
 
-.project__wraper:before {
+.project__wrapper:before {
 content: "";
 position: absolute;
 top: 0;
